@@ -1,9 +1,10 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         GnomeCanvas
-version:      0.25
+name:         Gnome2-Canvas
+version:      0.28
 version_from: Canvas.pm
 installdirs:  site
 requires:
+    Gtk2:                          0.26
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.10_07
+generated_by: ExtUtils::MakeMaker version 6.10_03
