@@ -1,3 +1,13 @@
+2003/07/18 13:00 muppetman
+
+	* Canvas.pm, Makefile.PL, README: bump version information for 0.28
+	release
+
+2003/07/07 23:06 muppetman
+
+	* Makefile.PL: use new args of Gtk2::CodeGen->write_boot to avoid
+	boot problems
+
 2003/07/05 00:42 muppetman
 
 	* xs/GnomeCanvasBpath.xs, canvas_demo/canvas-curve.pl,
